Bug 137033 Chrome buttons remain highlighted after dropdown item selected r=ben, sr=bryner, a=asa Manually clear hover state when menupopup closes